--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div id="header"><!-- div for header -->
      <div id="navigation">
       <div class=logo>
-        <img src="css/images/logo1.PNG" alt="CINE EVER">
+        <img src="css/images/logo1.png" alt="CINE EVER">
       </div>
 	<tr>
 	<td colspan= "1" height="50" align="right">
