--- a/inthreater.html
+++ b/inthreater.html
@@ -13,7 +13,7 @@
 <div id="shell">
   <div id="header">
     <div class=logo>
-      <img src="css/images/logo1.PNG" alt="CINE EVER">
+      <img src="css/images/logo1.png" alt="CINE EVER">
     </div>
     
     <div id="navigation">
