--- a/comingsoon.html
+++ b/comingsoon.html
@@ -25,7 +25,7 @@
       </ul>
     </div>
 		<div>
-			<img id="topimg" src="css/images1/Home/e.jpg"  height="400px" width="100%"/><!-- picture slideshow -->						
+			<img id="topimg" src="css/images1/Home/e.JPG"  height="400px" width="100%"/><!-- picture slideshow -->						
 			<p><b>UPCOMING MOVIES</b> </p>
 		</div>
 		<div></div>
